; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/classq/extr_classq_fq_codel.c_fq_head_drop.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/classq/extr_classq_fq_codel.c_fq_head_drop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { %struct.ifclassq* }
%struct.ifclassq = type { i32 }
%struct.TYPE_10__ = type { i64 }

@QP_MBUF = common dso_local global i64 0, align 8
@PKTF_PRIV_GUARDED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fq_head_drop(%struct.TYPE_11__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_11__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_10__, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca %struct.ifclassq*, align 8
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %3, align 8
  store i32* %1, i32** %4, align 8
  %9 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 0
  %11 = load %struct.ifclassq*, %struct.ifclassq** %10, align 8
  store %struct.ifclassq* %11, %struct.ifclassq** %8, align 8
  %12 = call i32 @_PKTSCHED_PKT_INIT(%struct.TYPE_10__* %5)
  %13 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = call i32* @fq_getq_flow_internal(%struct.TYPE_11__* %13, i32* %14, %struct.TYPE_10__* %5)
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %2
  br label %38

18:                                               ; preds = %2
  %19 = call i32 @pktsched_get_pkt_vars(%struct.TYPE_10__* %5, i32** %6, i64** %7, i32* null, i32* null, i32* null, i32* null)
  %20 = load i64*, i64** %7, align 8
  store i64 0, i64* %20, align 8
  %21 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %5, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* @QP_MBUF, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %31

25:                                               ; preds = %18
  %26 = load i32, i32* @PKTF_PRIV_GUARDED, align 4
  %27 = xor i32 %26, -1
  %28 = load i32*, i32** %6, align 8
  %29 = load i32, i32* %28, align 4
  %30 = and i32 %29, %27
  store i32 %30, i32* %28, align 4
  br label %31

31:                                               ; preds = %25, %18
  %32 = load %struct.ifclassq*, %struct.ifclassq** %8, align 8
  %33 = call i32 @pktsched_get_pkt_len(%struct.TYPE_10__* %5)
  %34 = call i32 @IFCQ_DROP_ADD(%struct.ifclassq* %32, i32 1, i32 %33)
  %35 = load %struct.ifclassq*, %struct.ifclassq** %8, align 8
  %36 = call i32 @IFCQ_CONVERT_LOCK(%struct.ifclassq* %35)
  %37 = call i32 @pktsched_free_pkt(%struct.TYPE_10__* %5)
  br label %38

38:                                               ; preds = %31, %17
  ret void
}

declare dso_local i32 @_PKTSCHED_PKT_INIT(%struct.TYPE_10__*) #1

declare dso_local i32* @fq_getq_flow_internal(%struct.TYPE_11__*, i32*, %struct.TYPE_10__*) #1

declare dso_local i32 @pktsched_get_pkt_vars(%struct.TYPE_10__*, i32**, i64**, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @IFCQ_DROP_ADD(%struct.ifclassq*, i32, i32) #1

declare dso_local i32 @pktsched_get_pkt_len(%struct.TYPE_10__*) #1

declare dso_local i32 @IFCQ_CONVERT_LOCK(%struct.ifclassq*) #1

declare dso_local i32 @pktsched_free_pkt(%struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
